--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
   <head>
     <title>Webベースのカレンダーサンプル(Fullcalendar)</title>
     <meta charset="UTF-8" />
-<!--
     <meta name="viewport" id="id_viewport" content="width=device-width" >
--->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"></link>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.10/font-awesome-animation.css" type="text/css" media="all"></link>
  
@@ -39,7 +37,7 @@
   </head>
   <body>
     <div id='calendar'>
-      <i class="fa fa-spinner fa-spin fa-3x"></i> よみこみ中
+      <i class="fa fa-refresh fa-spin fa-lg"></i> よみこみ中
     </div>
   </body>
 </html>
